# ros2_study_backup

./: .gitignore
.devcontainer/: devcontainer.json
chapt2/: CMakeLists.txt.back  ros2_cpp_node.cpp  ros2_python_node.py
chapt2_ws/: novel1.txt  novel3.txt
chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2_ws/src/demo_cpp_pkg/src/: learn_auto.cpp  learn_funcational.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
chapt2_ws/src/demo_python_pkg/: setup.py
chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py  writer_node.py
chapt4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: Patrol.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/demo_cpp_service_param/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service_param/launch/: actions.launch.py  demo.launch.py
chapt4/chapt4_ws/src/demo_cpp_service_param/src/: patrol_client.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt4/chapt4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py
chapt4/chapt4_ws/src/demo_python_service_param/: package.xml  setup.cfg  setup.py
chapt4/chapt4_ws/src/demo_python_service_param/demo_python_service_param/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.py
chapt5/chapt5_ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
chapt6/chapt6_ws/src/fishbot_description/: CMakeLists.txt
chapt6/chapt6_ws/src/fishbot_description/config/: fishbot_ros2_controller.yaml
chapt6/chapt6_ws/src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapt6/chapt6_ws/src/fishbot_description/urdf/: first_robot.urdf
chapt6/chapt6_ws/src/fishbot_description/world/: custom_room.world
chapt7/chapt7_ws/: README.md
chapt7/chapt7_ws/src/autopatrol_interfaces/: CMakeLists.txt
chapt7/chapt7_ws/src/autopatrol_robot/autopatrol_robot/: patrol_node.py
chapt7/chapt7_ws/src/fishbot_application/: package.xml  setup.py
chapt7/chapt7_ws/src/fishbot_description/: package.xml
chapt7/chapt7_ws/src/fishbot_description/config/: fishbot_ros2_controller.yaml
chapt8/chapt8_ws/src/autopatrol_interfaces/: package.xml
chapt8/chapt8_ws/src/autopatrol_robot/: package.xml  setup.py
chapt8/chapt8_ws/src/fishbot_application/: setup.py
chapt8/chapt8_ws/src/fishbot_navigation2/: package.xml
chapt8/chapt8_ws/src/nav2_custom_controller/: package.xml
chapt8/chapt8_ws/src/nav2_custom_planner/: custom_planner_plugin.xml  package.xml
chapt8/learn_pluginlib/src/motion_control_system/: CMakeLists.txt  package.xml
topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
topic_practice_ws/src/status_publisher/: package.xml  setup.py
topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
topic_ws/: novel1.txt  novel2.txt
topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
topic_ws/src/demo_python_topic/: setup.py
topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
topic_ws/src/demo_python_topic/test/: novel_pub_node.py
(+27 files in other folders)
